--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
     });
   });
 </script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBm231eIrUwLzPFDi5iuugu4XJRPeP66mg",
+    authDomain: "flyhightravelsdemoapp.firebaseapp.com",
+    projectId: "flyhightravelsdemoapp",
+    storageBucket: "flyhightravelsdemoapp.firebasestorage.app",
+    messagingSenderId: "14839479142",
+    appId: "1:14839479142:web:d7c6f0e1fc78ea31d7e6a7",
+    measurementId: "G-0XD1L5JJ4H"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </head>
 <body>
 
